@@ -1,5 +1,5 @@
-curl -O https://www.cpan.org/src/5.0/perl-5.26.2.tar.gz
-tar xfz perl-5.26.2.tar.gz
+curl -O https://www.cpan.org/src/5.0/perl-5.38.2.tar.gz
+tar xfz perl-5.38.2.tar.gz
 curl -O -L https://github.com/kr/beanstalkd/archive/v1.10.tar.gz
 tar xfz v1.10.tar.gz
 curl -O -L http://prdownloads.sourceforge.net/libpng/libpng-1.6.34.tar.gz?download
